# rust-ed

./: .gitignore  AUTHORS  Cargo.toml  ChangeLog  INSTALL  Justfile  NEWS  README.md  THANKS
doc/: rust-ed.1  rust-ed.texi
docker/: Dockerfile.drop-in-test  Dockerfile.gnu-ed  Dockerfile.rust-ed  Dockerfile.test-runner
gnu-ed-source/: VERSION.txt  ed-1.22.2.tar
src/: buffer.rs  carg_parser.rs  error.rs  global.rs  io.rs  main.rs  main_loop.rs  regex.rs  signal.rs
tests/: README.md  differential_containerized.rs
tests/common/: mod.rs
tests/common/suites/: README.md  addressing.rs  cmd_append.rs  cmd_change.rs  cmd_delete.rs  cmd_edit.rs  cmd_equals.rs  cmd_filename.rs  cmd_global.rs  cmd_help.rs  cmd_insert.rs  cmd_join.rs  cmd_list.rs  cmd_mark.rs  cmd_move.rs  cmd_number.rs  cmd_print.rs  cmd_prompt.rs  cmd_quit.rs  cmd_read.rs  cmd_search.rs  cmd_shell.rs  cmd_substitute.rs  cmd_transfer.rs  cmd_undo.rs  cmd_write.rs  cmd_yank.rs  error_conditions.rs  file_creation.rs  mod.rs
